fix about content on mobile

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -141,8 +141,8 @@
     left: 0;
     opacity: 0.6;
     z-index: 1;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.75) 45%, rgb(0, 0, 0, 1) 50%);
-    @media all and (min-width: 575px) {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.10) 45%, rgb(0, 0, 0, 1) 50%);
+    @media all and (min-width: 970px) {
       background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 45%, rgb(0, 0, 0, 1) 50%);
     }
   }
@@ -152,23 +152,21 @@
     position: relative;
     z-index: 2;
 
-    @media all and (min-width: 575px) {
+    @media all and (min-width: 970px) {
       position: absolute;
-      bottom: 0;
-      max-width: 600px;
-      transform: translate(-0%, -50%);
-      left: 50%;
-      top: 50%;
+      max-width: 550px;
+      right: 0;
+      top: 0;
       margin-left: 4rem;
     }
   }
   img {
     object-position: 30%;
     display: block;
-    position: absolute;
+    position: static;
     height: 100%;
     object-fit: cover;
-    @media all and (min-width: 575px) {
+    @media all and (min-width: 970px) {
       position: static;
       object-position: center;
     }
